apps/staging/syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: syncthing
spec:
  ingressClassName: traefik
  rules:
    - host: syncthing.lab.nohermosa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing
                port:
                  number: 8384
